added thumbnails for all posts, more config options, added requirements.txt

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
                 "2",
             ],
             "cwd": "${workspaceFolder}",
-            "envFile": "${workspaceFolder}/myenv",
+            "envFile": "${workspaceFolder}/venv_chv",
             "console": "integratedTerminal",
             "justMyCode": true,
         },
@@ -24,21 +24,27 @@
                 "100"
             ],
             "cwd": "${workspaceFolder}",
-            "envFile": "${workspaceFolder}/myenv",
+            "envFile": "${workspaceFolder}/venv_chv",
             "console": "integratedTerminal",
             "justMyCode": true,
         },
         {
-            "name": "Python: Custom database.py",
+            "name": "Python: Custom run.py",
             "type": "debugpy",
             "request": "launch",
-            "program": "${workspaceFolder}/main/chv_database.py",
-            "args": [
-                "2",
-                "100"
-            ],
+            "program": "${workspaceFolder}/main/chv_run.py",
             "cwd": "${workspaceFolder}",
-            "envFile": "${workspaceFolder}/myenv",
+            "envFile": "${workspaceFolder}/venv_chv",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+        },
+        {
+            "name": "Python: Custom run_tkinter.py",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/main/chv_run_tkinter.py",
+            "cwd": "${workspaceFolder}",
+            "envFile": "${workspaceFolder}/venv_chv",
             "console": "integratedTerminal",
             "justMyCode": true,
         }
